# Wavvon-server

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  cliff.toml  docker-compose.dev.yml  docker-compose.farm.yml  docker-compose.yml  farm.toml.example  hub.toml.example
.githooks/: pre-commit
.github/workflows/: auto-tag.yml  build.yml  (+1 more)
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  hub_manager.rs  settings.rs
crates/bot-kit/: Cargo.toml
crates/bot-kit/src/: lib.rs  lobby.rs  relay.rs
crates/discord-import/: Cargo.toml
crates/discord-import/src/: discord_client.rs  discord_types.rs  hub_client.rs  main.rs  manifest.rs  mapping.rs  permissions_table.rs  plan.rs  report.rs  retry.rs
crates/hub/: Cargo.toml  Dockerfile
crates/hub/src/: banlist_worker.rs  bootstrap.rs  cert_revocation_worker.rs  cert_worker.rs  dm_worker.rs  lan.rs  lib.rs  main.rs  permissions.rs  rate_limit.rs  reminder_worker.rs  retention_worker.rs  server.rs  settings.rs  setup.rs  state.rs  subkey_revocation_worker.rs  temp_channel_worker.rs  web_client.rs
crates/hub/src/auth/: handlers.rs  middleware.rs  models.rs
crates/hub/src/bots/: capabilities.rs  dispatch.rs  events.rs  mod.rs  token_expiry.rs
crates/hub/src/db/: migrations.rs  pool.rs
crates/hub/src/federation/: client.rs  handlers.rs
crates/hub/src/outgoing_webhooks/: delivery.rs  mod.rs  models.rs  routes.rs  worker.rs
crates/hub/src/routes/: admin_search.rs  alliance_models.rs  badges.rs  banlist.rs  bot_models.rs  certs.rs  challenge.rs  channel_permissions.rs  channels.rs  chat_models.rs  dh_keys.rs  dm_models.rs  emojis.rs  events.rs  friends.rs  health.rs  hub.rs  hub_icons.rs  identity.rs  invite_models.rs  invites.rs  key_rotation.rs  listing.rs  lobby.rs  me.rs  messages.rs  metrics.rs  mod.rs  moderation_models.rs  pairing.rs  pins.rs  polls.rs  post_models.rs  posts.rs  preview.rs  profile.rs  recovery.rs  reports.rs  role_categories.rs  role_models.rs  (+10 more)
crates/hub/src/routes/alliances/: channels.rs  crud.rs  membership.rs  mod.rs  models.rs
crates/hub/src/routes/bots/: admin.rs  bot_api.rs  external.rs  mod.rs  models.rs  screenshare.rs  voice.rs
crates/hub/src/routes/dms/: conversations.rs  keys.rs  messages.rs  mod.rs  models.rs
crates/hub/src/routes/games/: admin.rs  helpers.rs  mod.rs  models.rs  session_v1.rs
crates/hub/src/routes/moderation/: bans.rs  channel_mod.rs  helpers.rs  mod.rs  models.rs
crates/hub/src/routes/ws/: conn_state.rs  connection.rs  mod.rs  screen_share.rs  voice.rs
crates/hub/src/routes/ws/handlers/: chat.rs  game.rs  mini_app.rs  mod.rs  screen.rs  voice.rs
crates/hub/src/search/: mod.rs  tantivy_search.rs
crates/hub/tests/: alliance_flow.rs  auth_flow.rs  banner_channels_flow.rs  birthday_timezone_flow.rs  bootstrap_flow.rs  bot_capability_grants_flow.rs  bots_flow.rs  cert_revocation_relay_flow.rs  certs_flow.rs  challenge_flow.rs  channel_depth_flow.rs  channel_permissions_flow.rs  chat_flow.rs  common.rs  cors_flow.rs  db_sweep.rs  dh_keys_flow.rs  directory_flow.rs  dm_attribution_flow.rs  dm_block_flow.rs  dms_flow.rs  event_propagation_flow.rs  event_slots_flow.rs  events_flow.rs  events_hub_wide_flow.rs  federation_flow.rs  forum_flow.rs  forum_tags_flow.rs  friends_flow.rs  hub_admin_flow.rs  hub_icons_flow.rs  hub_updated_broadcast_flow.rs  hub_wizard_flow.rs  identity_flow.rs  invite_flow.rs  lan_mode_flow.rs  lobby_flow.rs  migrations.rs  mini_app_scope_flow.rs  moderation_admin_flow.rs  (+32 more)
crates/ttt-bot/: Cargo.toml  README.md
crates/ttt-bot/src/: board.rs  game.html  main.rs
docs/: banner-channels.md  screen-share-modal.md  wire-format.md
farm/: Cargo.toml  Dockerfile
hub/: Cargo.toml  Dockerfile  docker-compose.yml
hub/src/: banlist_worker.rs  bootstrap.rs  cert_worker.rs  dm_worker.rs  lib.rs  main.rs  permissions.rs  rate_limit.rs  retention_worker.rs  server.rs  settings.rs  state.rs
hub/src/auth/: handlers.rs  middleware.rs  models.rs
hub/src/bots/: dispatch.rs  events.rs  token_expiry.rs
hub/src/db/: migrations.rs
hub/src/federation/: client.rs  handlers.rs
hub/src/routes/: admin_auth.rs  admin_panel.rs  alliance_models.rs  alliances.rs  badges.rs  bot_models.rs  bots.rs  certs.rs  challenge.rs  channels.rs  chat_models.rs  dh_keys.rs  directory.rs  dm_models.rs  dms.rs  emojis.rs  events.rs  friends.rs  games.rs  health.rs  hub.rs  hub_icons.rs  identity.rs  invites.rs  listing.rs  lobby.rs  me.rs  messages.rs  metrics.rs  mod.rs  moderation.rs  pairing.rs  pins.rs  polls.rs  post_models.rs  posts.rs  preview.rs  profile.rs  recovery.rs  reports.rs  (+9 more)
hub/src/routes/alliances/: channels.rs  membership.rs  mod.rs  models.rs
hub/src/routes/dms/: conversations.rs  messages.rs  mod.rs  models.rs
hub/src/routes/games/: session_v2.rs
hub/src/routes/moderation/: helpers.rs
hub/src/routes/ws/: conn_state.rs  connection.rs  mod.rs  voice.rs
hub/src/routes/ws/handlers/: bot.rs  chat.rs  screen.rs  voice.rs
hub/src/search/: mod.rs  null_search.rs  tantivy_search.rs
hub/tests/: alliance_flow.rs  auth_flow.rs  banner_channels_flow.rs  bots_flow.rs  certs_flow.rs  challenge_flow.rs  channel_depth_flow.rs  chat_flow.rs  common.rs  cors_flow.rs  dh_keys_flow.rs  directory_flow.rs  dm_block_flow.rs  dms_flow.rs  events_flow.rs  federation_flow.rs  forum_flow.rs  friends_flow.rs  games_flow.rs  hub_admin_flow.rs  hub_icons_flow.rs  identity_flow.rs  invite_flow.rs  lobby_flow.rs  migrations.rs  moderation_flow.rs  multi_device_auth.rs  pairing_flow.rs  polls_flow.rs  pow_flow.rs  presence_multi_session_flow.rs  preview_flow.rs  rate_limit_flow.rs  recovery_flow.rs  roles_flow.rs  screen_share_flow.rs  search_flow.rs  survey_flow.rs  tags_badges_flow.rs  token_expiry_flow.rs  (+3 more)
identity/: Cargo.toml
identity/src/: ecies.rs  lib.rs  pow.rs  subkey.rs  wire.rs
identity/tests/: wire_vectors.rs
scripts/: check.sh  install-hooks.ps1  install-hooks.sh  release.sh
seed/: Cargo.toml
tools/demo-seed/: Cargo.toml
tools/demo-seed/src/: main.rs
voxply-store-sqlite/: Cargo.toml
(+223 files in other folders)
