[workspace]
resolver = "2"
members = [
    "crates/hub",
    "crates/seed",
    "crates/identity",
    "crates/farm",
    "crates/agent",
    "crates/voxply-store",
    "crates/voxply-store-sqlite",
    "crates/demo-seed",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "any", "postgres"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
opentelemetry       = "0.27"
opentelemetry_sdk   = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp  = { version = "0.27", features = ["http-proto", "reqwest-rustls"] }
tracing-opentelemetry = "0.28"
config = { version = "0.14", features = ["toml"] }
tantivy = "0.22"
