[package]
name = "voxply-hub"
version = "0.2.3"
edition = "2021"

[[bin]]
name = "voxply-hub"
path = "src/main.rs"

[lib]
name = "voxply_hub"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = "0.5"
tower-http = { workspace = true }
hex = "0.4"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
base64 = { workspace = true }
voxply-identity = { path = "../identity" }
voxply-store = { path = "../voxply-store" }
voxply-store-sqlite = { path = "../voxply-store-sqlite" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sqlx = { workspace = true }
futures-util = "0.3"
uuid = { workspace = true }
bytes = "1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
opentelemetry        = { workspace = true }
opentelemetry_sdk    = { workspace = true }
opentelemetry-otlp   = { workspace = true }
tracing-opentelemetry = { workspace = true }

config = { workspace = true }
tantivy = { workspace = true }

flate2 = "1"
tar = "0.4"
tempfile = "3"

[dev-dependencies]
axum-test = "19"
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
