[package]
name = "voxply-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# ed25519-dalek — cryptographic signing for decentralized identity
ed25519-dalek = { version = "2", features = ["rand_core"] }

# rand — random number generation (needed to create new keypairs)
rand = "0.8"

# hex — converts raw bytes to readable hex strings (like BitConverter.ToString in C#)
hex = "0.4"

# dirs — finds platform-specific directories (like Environment.GetFolderPath in C#)
dirs = "6"

# SHA256 for proof-of-work security levels
sha2 = "0.10"

# BIP39 mnemonic recovery phrases (24 words ↔ secret key)
bip39 = "2"

# hkdf — HMAC-based Key Derivation Function (RFC 5869). Like .NET's
# HKDF.DeriveKey: expands one secret into multiple distinct keys via a
# domain-separation label. Used to derive the master keypair from the
# same BIP39 entropy that already backs the per-device subkey.
hkdf = "0.12"

# x25519-dalek — X25519 Diffie-Hellman for E2E DM encryption.
# Derived from the Ed25519 seed so no separate key storage is needed.
x25519-dalek = { version = "2", features = ["static_secrets"] }

# aes-gcm — AES-256-GCM authenticated encryption for DM ciphertext.
aes-gcm = "0.10"

# curve25519-dalek — low-level Curve25519 arithmetic (CompressedEdwardsY,
# Montgomery conversion). Indirect dep via ed25519-dalek / x25519-dalek;
# declared directly here so we can use the point-conversion API in ecies.rs.
curve25519-dalek = "4"
