[package]
name = "ttt-bot"
version = "0.1.0"
edition = "2021"
description = "Phase 1 demo bot: tic-tac-toe over Wavvon's bot mini-app relay (bot-capability-layer.md §7)."

[[bin]]
name = "ttt-bot"
path = "src/main.rs"

[dependencies]
wavvon-identity = { path = "../identity" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
